--- a/index.html
+++ b/index.html
@@ -481,7 +481,8 @@ p-id="1230" />                         <path fill="#555555" d="M 653.653 904.344
 p-id="1231" />             </svg>                         
 <!-- <FONT 
 color="red">Opening:</FONT> -->
-The positions for PhD and master students joining in the year 2023 in our lab are <B>already filled</B>. I appoligize that I may not respond to emails inquiring about PhD & Master positions.
+<!--The positions for PhD and master students joining in the year 2023 in our lab are <B>already filled</B>. I appoligize that I may not respond to emails inquiring about PhD & Master positions.-->
+          For students who are interested in joining our lab  (PhD/Mater/Intern/Postdoc), please contact me via gaohuang AT tsinghua.edu.cn.
 For international students, please check <a href="https://www.tsinghua.edu.cn/publish/thu2018en/newthuen_cnt/02-admissions-3.html">HERE</a> for available scholarships. For postdocs, please check <a href="https://postdoctor.tsinghua.edu.cn/info/zxtz/1777">HERE</a>.
 
 
@@ -972,7 +973,7 @@ target="blank">talk</A>]
 <DIV class="media-body"><A class="paper-title" href="https://arxiv.org/abs/1603.09382"><BR><B>Deep Networks with Stochastic Depth. </B></A>              
     [<A href="https://github.com/gaohuang/Stochastic_Depth" 
 target="blank">code</A>]  [<A href="http://www.eccv2016.org/files/posters/S-3A-08.pdf" 
-target="blank">poster</A>] [<A href="https://channel9.msdn.com/Events/Neural-Information-Processing-Systems-Conference/Neural-Information-Processing-Systems-Conference-NIPS-2016/Deep-Learning-Symposium-Session-2" 
+target="blank">poster</A>] [<A href="https://channel9.msdn.com/Events/Neural-Information-Processing-Systems-Conference/Neural-Information-Processing-Systems-Conference-NIPS-2016/Deep-Learning-Symposium-Session-2"
 target="blank">talk</A>]          
     <BR><b>Gao Huang*</b>, Yu Sun*, Zhuang Liu, Daniel Sedra, Kilian Weinberger. <BR><I>European Conference on Computer Vision (<b>ECCV Spotlight</b>) 2016.<br>
 <p style="color: red; display: inline;" href="https://sites.google.com/site/nips2016deeplearnings/accepted-papers"> (This paper was recommended as an Oral at NIPS 2016 Deep Learning Symposium) </p>
