--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ var _hmt = _hmt || [];
 
            <h2>Bio</h2>
             <!-- <ul> -->
-            Gao Huang is an Associate Professor affiliated with the Department of Automation at <a href=" https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. He obtained his PhD degree in machine learning from Tsinghua in 2015, and spent three years at Cornell University as a postdoc. His research interests lie in machine learning and computer vision. In particular, he is actively working on efficient deep learning, <a href="https://arxiv.org/pdf/2102.04906.pdf">dynamic neural networks</a>, learning with limited data and reinforcement learning. His work on DenseNet won the Best Paper Award of CVPR (2017) and has collected more than 40,000 citations according to <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Google Scholar</a>. (<a href="http://www.gaohuang.net/CV-Gao.pdf">C.V.</a>)
+            Gao Huang is an Associate Professor affiliated with the Department of Automation at <a href=" https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. He obtained the PhD degree in machine learning from Tsinghua in 2015, and spent three years at Cornell University as a postdoc. His research interests lie in machine learning and computer vision. In particular, he is actively working on efficient deep learning, <a href="https://arxiv.org/pdf/2102.04906.pdf">dynamic neural networks</a>, learning with limited data and reinforcement learning. His work on DenseNet won the Best Paper Award of CVPR (2017) and has collected more than 50,000 citations according to <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Google Scholar</a>. (<a href="http://www.gaohuang.net/CV-Gao.pdf">C.V.</a>)
             <!-- </ul> -->
             <br>            <br>
 
@@ -1055,6 +1055,7 @@ target="blank">talk</A>]
 <H2 id="awards">Awards</H2>
 <DIV>
 <UL>
+<li>MIT TR35 Asia-Pacific, 2021</li>
 <li>Qingcheng Award, Damo Academy of Alibaba, 2020</li>
 <li>Outstanding Young Researcher, Chinese Association for Artificial Intelligence, 2019</li>
 <li>Super AI Leader - Pioneer Award, World AI Conference (WAIC), 2018</li>
@@ -1077,54 +1078,66 @@ target="blank">talk</A>]
 <DIV>
 <UL>
 
-<li> <p><b>PhD Students</b>: <BR> 
-    <a >Haojun Jiang (2020-)</a> <BR>
+<li> <p><b>Graduate Students</b>: <BR> 
+    <a href="https://github.com/jianghaojun">Haojun Jiang (2020-)</a> <BR>
     <a>Chaoqun Du (2020-)</a> <BR>
+    <a>Yongxien Chng (2020-)</a><BR>
+    <a>Yifan Pu (2020-)</a><BR>
     <a>Rui Lu (2021-)</a><BR>
     <a>Qichen Zhao (2021-)</a><BR>
     <a>Yang Yue (2022-)</a><BR>
     <a>Zanlin Ni (2022-)</a><BR>
+    <a>Henry Zheng (2022-)</a><BR>
+    <a>Dongchen Han (2023-)</a><BR>
 </p></li>
 
-  <li> <p><b>Co-supervised PhD students</b>: <BR> 
-    <a >Hui Wu</a> (2014-2020; Tencent)  <BR>
-    <a >Yiming Chen</a> (2015-2021; MeiTuan)  <BR>
-     <a href="https://www.yangle.cc/">Le Yang</a> (2015-2021; Xi'an Jiaotong University)  <BR>
-     <a>Wenjie Shi</a> (2016-2022)  <BR>
-     <a>Hangkai Hu</a> (2016-2022)  <BR>
-     <a>Peng Jiang</a> (2017-)  <BR>
-     <a href="https://yizenghan.top/">Yizeng Han</a> (2018-)  <BR>
-     <a href="https://panxuran.github.io/">Xuran Pan</a> (2018-)  <BR>
-     <a>Chaofei Wang</a> (2018-)  <BR>
-     <a href="https://www.rainforest-wang.cool/">Yulin Wang</a> (2019-)  <BR>
-     Qisen Yang  (2019-) <BR>
-     Jiayi Guo  (2020-) <BR>
-     Chunjiang Ge  (2020-) <BR>
-     Rui Huang  (2020-) <BR>
-     Zhuofan Xia (2020-) <BR>
-     Yang Yue (2022-) </p></li>
+  <li> <p><b>Co-supervised Graduate students</b>: <BR> 
+    <a href="https://yizenghan.top/">Yizeng Han</a> (2018-)  <BR>
+    <a href="https://panxuran.github.io/">Xuran Pan</a> (2018-)  <BR>
+    <a href="https://www.rainforest-wang.cool/">Yulin Wang</a> (2019-)  <BR>
+    Qisen Yang  (2019-) <BR>
+    <a href="https://www.jiayiguo.net/">Jiayi Guo</a>  (2020-) <BR>
+    <a href="https://scholar.google.com/citations?user=ZueTF6oAAAAJ&hl=en">Chunjiang Ge </a>  (2020-) <BR>
+    Rui Huang  (2020-) <BR>
+    <a href="https://scholar.google.com/citations?user=m2M6b58AAAAJ&hl=en">Zhuofan Xia </a> (2020-) <BR>
+    Yang Yue (2022-) 
+    Huanqian Wang (2023-)
+</p></li>
 
-  <li> <p><b>Undergraduate students at Cornell</b>: <BR> 
-     Yu Sun (2015-2016; now PhD student at Berkeley) <BR>
-    <a href="https://liuzhuang13.github.io/">Zhuang Liu</a> (2016; now PhD student at Berkeley) <BR>
-    <a href="https://taineleau.me/">Danlu Chen</a> (2017; now PhD student at UCSD) <BR>
-    <a href="http://www.tianhongli.me/">Tianhong Li</a> (2017; now PhD student at MIT) <BR>
-    <a href="https://sites.google.com/site/ruihanwu14/home">Ruihan Wu</a> (2017; now PhD student at Cornell) <BR>
-    <a href="https://shichenliu.github.io/">Shichen Liu</a> (2017; now PhD student at USC) <BR>
-    <a href="https://scholar.google.com/citations?user=_BiloKgAAAAJ&hl=en">Xu Zou</a> (2017; now PhD student at THU) <BR> 
-     Yin Liu (2017; now PhD student at WISC) <BR> 
-     Yanyi Liu (2018; now PhD student at Cornell) <BR> 
-    Ruojin Cai (2018; now PhD student at Cornell) <BR> 
-    <a href="http://www.cs.cornell.edu/~tyu/index.html">Tao Yu</a> (2018; now PhD student at Cornell) <BR> 
-    <a href="https://zlai0.github.io/">Zihang Lai</a> (2018; now undergraduate at Oxford)
+
+
+
+<li> <p><b>Alumni</b>: <BR> 
+    <a>Chaofei Wang</a> (2018-2023)  <BR>
+    <a>Peng Jiang</a> (2017-2023)  <BR>
+    <a>Wenjie Shi</a> (2016-2022; Meituan)  <BR>
+    <a>Hangkai Hu</a> (2016-2022; Huawei)  <BR>
+    <a >Yiming Chen</a> (2015-2021; MeiTuan)  <BR>
+    <a href="https://www.yangle.cc/">Le Yang</a> (2015-2021; Faculty at Xi'an Jiaotong University)  <BR>    
+    <a >Hui Wu</a> (2014-2020; Tencent)  <BR>
 </p></li>
 
 <li> <p><b>Undergraduate students at Tsinghua</b>: <BR> 
-    <a >Hao Li</a> (2018-)  <BR>
-        <a>Zhuoyuan Wang</a> (2019-)  <BR>
-        <a>Kaiqian Han</a> (2019-)  <BR>
-        <a>Kuan Wang</a> (2019-)  <BR>
-        <a>Jiayu Xiao</a> (2019-)  <BR>
+    <a href="https://cpsxhao.github.io/">Hao Li</a> (2018; now PhD student at CUHK)  <BR>
+        <a>Zhuoyuan Wang</a> (2019; now PhD student at CMU)  <BR>
+        <a>Kaiqian Han</a> (2019; now at Sense Time)  <BR>
+        <a>Kuan Wang</a> (2019; now PhD student at GATech)  <BR>
+        <a>Jiayu Xiao</a> (2019; now PhD student at UCAS)  <BR>
+</p></li>
+
+  <li> <p><b>Undergraduate students at Cornell</b>: <BR> 
+     Yu Sun (2015-2016; now PhD student at Berkeley) <BR>
+    <a href="https://liuzhuang13.github.io/">Zhuang Liu</a> (2016-2017; now at Meta AI Research) <BR>
+    <a href="https://taineleau.me/">Danlu Chen</a> (2017-2018; now PhD student at UCSD) <BR>
+    <a href="http://www.tianhongli.me/">Tianhong Li</a> (2017; now PhD student at MIT) <BR>
+    <a href="https://sites.google.com/site/ruihanwu14/home">Ruihan Wu</a> (2017; now PhD student at Cornell) <BR>
+    <a href="https://shichenliu.github.io/">Shichen Liu</a> (2017; now at Google) <BR>
+    <a href="https://scholar.google.com/citations?user=_BiloKgAAAAJ&hl=en">Xu Zou</a> (2017; now PhD student at THU) <BR> 
+     Yanyi Liu (2018; now PhD student at Cornell) <BR> 
+    Ruojin Cai (2018; now PhD student at Cornell) <BR> 
+    <a href="http://www.cs.cornell.edu/~tyu/index.html">Tao Yu</a> (2018; now PhD student at Cornell) <BR> 
+    <a href="https://zlai0.github.io/">Zihang Lai</a> (2018; now PhD student at CMU)<BR>
+</p></li>
 
   </UL></DIV>
 <!-- </DIV> -->
@@ -1161,15 +1174,15 @@ target="blank">talk</A>]
 <DIV>
 <UL>
 
+    <li>Associate Editor, IEEE Transactions on Pattern Analysis and Machine Intelligence (2023-).</li>
     <li>Associate Editor, IEEE Transactions on Big Data (2021-).</li>
+    <li>Associate Editor, Pattern Recognition (2022-).</li>
 
-    <li>Senior Program Committee (SPC) member of IJCAI (2021).</li>
+    <li>Area Chair of NeurIPS(2023, 2022), ICCV(2023), ICML(2022), UAI(2022), CVPR(2021).</li>
 
-    <li>Area Chair of CVPR (2021).</li>
-
-    <li>Senior Program Committee (SPC) member of AAAI (2018, 2020).</li>
+    <li>Senior Program Committee (SPC) member of AAAI (2018, 2020), IJCAI (2021).</li>
   
-  <li>Reviewer for JMLR, Machine Learning, TPAMI, IJCV, TIP, TKDE, TNNLS, ...</li>        
+  <li>Reviewer for JMLR, TPAMI, IJCV, Machine Learning, IJCV, TIP, TKDE, TNNLS, ...</li>        
   
   <li>Reviewer for NeurIPS, ICML, CVPR, ICCV, ECCV, AAAI, AISTATS, ...</li>
   
@@ -1181,7 +1194,7 @@ target="blank">talk</A>]
   <DIV>
   <UL>
     <LI> gaohuang at tsinghua dot edu dot cn</LI>
-    <LI>617 Centre Main Building, Tsinghua University, Beijing 100084, China.</LI>
+    <LI>617A Centre Main Building, Tsinghua University, Beijing 100084, China.</LI>
     </UL></DIV>
 <!-- </DIV> -->
   
