20231012_update_by_yulin_wang

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ var _hmt = _hmt || [];
 
            <h2>Bio</h2>
             <!-- <ul> -->
-            Gao Huang is an Associate Professor affiliated with the Department of Automation at <a href=" https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. He obtained the PhD degree in machine learning from Tsinghua in 2015, and spent three years at Cornell University as a postdoc. His research interests lie in machine learning and computer vision. In particular, he is actively working on efficient deep learning, <a href="https://arxiv.org/pdf/2102.04906.pdf">dynamic neural networks</a>, learning with limited data and reinforcement learning. His work on DenseNet won the Best Paper Award of CVPR (2017) and has collected more than 50,000 citations according to <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Google Scholar</a>. (<a href="http://www.gaohuang.net/CV-Gao.pdf">C.V.</a>)
+            Gao Huang is an Associate Professor affiliated with the Department of Automation at <a href=" https://www.tsinghua.edu.cn/en/index.htm">Tsinghua University</a>. He obtained the PhD degree in machine learning from Tsinghua in 2015, and spent three years at Cornell University as a postdoc. His research interests lie in machine learning and computer vision. In particular, he is actively working on efficient deep learning, <a href="https://arxiv.org/pdf/2102.04906.pdf">dynamic neural networks</a>, learning with limited data and reinforcement learning. His work on DenseNet won the Best Paper Award of CVPR (2017) and has collected more than 55,000 citations according to <a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Google Scholar</a>. (<a href="http://www.gaohuang.net/CV-Gao.pdf">C.V.</a>)
             <!-- </ul> -->
             <br>            <br>
 
@@ -519,6 +519,23 @@ For international students, please check <a href="https://www.tsinghua.edu.cn/pu
            <!-- (<a href="https://scholar.google.com/citations?user=-P9LwcgAAAAJ&amp;hl=en">Full publication list on Google Scholar</a>) -->
       <BR>
           <!---->
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_tpami_EnvolvingAttn.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2212.08330"><B>
+            Convolution-enhanced Evolving Attention Networks.</B></A>
+            [<A href="https://github.com/pkuyym/EvolvingAttention"    target="_blank">code</A>]
+                <BR>Yujing Wang, Yaming Yang, Zhuo Li, Jiangang Bai, Mingliang Zhang, Xiangtai Li, Jing Yu, Ce Zhang, <b>Gao Huang</b>, Yunhai Tong.
+                        <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2023.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_tpami_SePiCo.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2204.08808"><B>
+            SePiCo: Semantic-Guided Pixel Contrast for Domain Adaptive Semantic Segmentation.</B></A>
+            [<A href="https://github.com/BIT-DA/SePiCo"    target="_blank">code</A>]
+                <BR>Binhui Xie, Shuang Li, Mingjia Li, Chi Harold Liu, <b>Gao Huang</b>, Guoren Wang.
+                        <BR><I>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>IEEE TPAMI</b>), 2023.<br></I>
+        <BR></DIV></DIV>
+
 
     <DIV class="publication media paperhi"><IMG class="papericon"  src="Gao%20Huang%20Homepage_files/2022_pami_gfnet.png" >
         <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/abs/2201.03014"><B>
@@ -603,6 +620,76 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
 <BR>
     <!---->
 
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_iccv_FlattenT.png">
+        <DIV class="media-body "><A class="paper-title" href="https://openaccess.thecvf.com/content/ICCV2023/papers/Han_FLatten_Transformer_Vision_Transformer_using_Focused_Linear_Attention_ICCV_2023_paper.pdf"><B>
+            FLatten Transformer: Vision Transformer using Focused Linear Attention.</B></A>
+            [<A href="https://github.com/LeapLabTHU/FLatten-Transformer"    target="_blank">code</A>]
+                <BR>Dongchen Han*, Xuran Pan*, Yizeng Han, Shiji Song, <b>Gao Huang</b>.
+                    <BR><I>International Conference on Computer Vision (<b>ICCV</b>) 2023.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_iccv_Dyn_Perceiver.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2306.11248.pdf"><B>
+            Dynamic Perceiver for Efficient Visual Recognition.</B></A>
+            [<A href="https://github.com/LeapLabTHU/Dynamic_Perceiver"    target="_blank">code</A>]
+                <BR>Yizeng Han*, Dongchen Han*, Zeyu Liu, Yulin Wang, Xuran Pan, Yifan Pu, Chao Deng, Junlan Feng, Shiji Song, <b>Gao Huang</b>.
+                    <BR><I>International Conference on Computer Vision (<b>ICCV</b>) 2023.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_iccv_EfficientTrain.png">
+        <DIV class="media-body "><A class="paper-title" href="https://openaccess.thecvf.com/content/ICCV2023/papers/Wang_EfficientTrain_Exploring_Generalized_Curriculum_Learning_for_Training_Visual_Backbones_ICCV_2023_paper.pdf"><B>
+            EfficientTrain: Exploring Generalized Curriculum Learning for Training Visual Backbones.</B></A>
+            [<A href="https://github.com/LeapLabTHU/EfficientTrain"    target="_blank">code</A>]
+                <BR>Yulin Wang*, Yang Yue*, Rui Lu, Tianjiao Liu, Zhao Zhong, Shiji Song, <b>Gao Huang</b>.
+                    <BR><I>International Conference on Computer Vision (<b>ICCV</b>) 2023.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_iccv_arc.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2303.07820.pdf"><B>
+            Adaptive Rotated Convolution for Rotated Object Detection.</B></A>
+            [<A href="https://github.com/LeapLabTHU/ARC"    target="_blank">code</A>]
+                <BR>Yifan Pu*, Yiru Wang*, Zhuofan Xia, Yizeng Han, Yulin Wang, Weihao Gan, Zidong Wang, Shiji Song, <b>Gao Huang</b>.
+                    <BR><I>International Conference on Computer Vision (<b>ICCV</b>) 2023.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_iccv_deep_incub.png">
+        <DIV class="media-body "><A class="paper-title" href="https://openaccess.thecvf.com/content/ICCV2023/papers/Ni_Deep_Incubation_Training_Large_Models_by_Divide-and-Conquering_ICCV_2023_paper.pdf"><B>
+            Deep Incubation: Training Large Models by Divide-and-Conquering.</B></A>
+            [<A href="https://github.com/LeapLabTHU/Deep-Incubation"    target="_blank">code</A>]
+                <BR>Zanlin Ni*, Yulin Wang*, Jiangwei Yu, Haojun Jiang, Yue Cao, <b>Gao Huang</b>.
+                    <BR><I>International Conference on Computer Vision (<b>ICCV</b>) 2023.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_icml.png">
+        <DIV class="media-body "><A class="paper-title" href="https://arxiv.org/pdf/2306.03362.pdf"><B>
+            Boosting Offline Reinforcement Learning with Action Preference Query.</B></A>
+                <BR>Qisen Yang*, Shenzhi Wang*, Matthieu Gaetan Lin, Shiji Song, <b>Gao Huang</b>.
+                    <BR><I>International Conference on Machine Learning (<b>ICML</b>) 2023.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_cvpr_zero_shot.png">
+        <DIV class="media-body "><A class="paper-title" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Guo_Zero-Shot_Generative_Model_Adaptation_via_Image-Specific_Prompt_Learning_CVPR_2023_paper.pdf"><B>
+            Zero-shot Generative Model Adaptation via Image-specific Prompt Learning.</B></A>
+            [<A href="https://github.com/Picsart-AI-Research/IPL-Zero-Shot-Generative-Model-Adaptation"    target="_blank">code</A>]
+                <BR>Jiayi Guo*, Chaofei Wang*, You Wu, Eric Zhang, Kai Wang, Xingqian Xu, Shiji Song, Humphrey Shi, <b>Gao Huang</b>.
+                    <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2023.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_cvpr_slideT.png">
+        <DIV class="media-body "><A class="paper-title" href="https://openaccess.thecvf.com/content/CVPR2023/papers/Pan_Slide-Transformer_Hierarchical_Vision_Transformer_With_Local_Self-Attention_CVPR_2023_paper.pdf"><B>
+            Slide-Transformer: Hierarchical Vision Transformer with Local Self-Attention.</B></A>
+            [<A href="https://github.com/LeapLabTHU/Slide-Transformer"    target="_blank">code</A>]
+                <BR>Xuran Pan*, Tianzhu Ye*, Zhuofan Xia, Shiji Song, <b>Gao Huang</b>.
+                    <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2023.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2023_iclr_budget.png">
+        <DIV class="media-body "><A class="paper-title" href="https://openreview.net/pdf?id=sVzBN-DlJRi"><B>
+            Budgeted Training for Vision Transformer.</B></A>
+                <BR>Zhuofan Xia*, Xuran Pan*, Xuan Jin*, Yuan He, Hui Xue, Shiji Song, <b>Gao Huang</b>.
+                    <BR><I>International Conference on Learning Representations (<b>ICLR</b>) 2023.<br></I>
+        <BR></DIV></DIV>
+
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_nips_kd.png">
         <DIV class="media-body "><A class="paper-title" href="https://openreview.net/pdf?id=0ltDq6SjrfW"><B>
             Efficient Knowledge Distillation from Model Checkpoints.</B></A>
@@ -662,6 +749,14 @@ all by date</SPAN> / <SPAN id="book-chapters">book chapters</SPAN>) --></SPAN>
             [<A href="https://github.com/LeapLabTHU/ActiveNeRF"    target="_blank">code</A>]
                 <BR>Xuran Pan, Zihang Lai, Shiji Song, <b>Gao Huang</b>.
                       <BR><I>European Conference on Computer Vision (<b>ECCV</b>) 2022.<br></I>
+        <BR></DIV></DIV>
+
+    <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_cvpr_PseudoQ.png">
+        <DIV class="media-body "><A class="paper-title" href="https://openaccess.thecvf.com/content/CVPR2022/papers/Jiang_Pseudo-Q_Generating_Pseudo_Language_Queries_for_Visual_Grounding_CVPR_2022_paper.pdf"><B>
+            Pseudo-Q: Generating Pseudo Language Queries for Visual Grounding.</B></A>
+                [<A href="https://github.com/LeapLabTHU/Pseudo-Q"    target="_blank">code</A>]
+                <BR>Haojun Jiang*, Yuanze Lin*, Dongchen Han, Shiji Song, <b>Gao Huang</b>.
+                        <BR><I>IEEE Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>) 2022.<br></I>
         <BR></DIV></DIV>
 
     <DIV class="publication media paperhi"><IMG class="papericon" src="Gao%20Huang%20Homepage_files/2022_cvpr_acmix.png">
@@ -1055,13 +1150,30 @@ target="blank">talk</A>]
 <H2 id="awards">Awards</H2>
 <DIV>
 <UL>
+
+<li>CVPR Best Paper Finalists, 2022</li>
+<li>AI 2000 Most Influential Scholar in Computer Vision, AMiner, 2022</li>
+<li>MIT TR 35 Asia-Pacific, MIT Technology Review, 2021</li>
+<li>Research Fund for Outstanding Young Scholars, Nature Science Foundation of China, 2020</li>
+<li>DAMO Qingcheng Award, Alibaba, 2020</li>
+<li>Outstanding Young Researcher Award, Chinese Association for Artificial Intelligence, 2019</li>
+<li>Zhiyuan Young Scholar, Beijing Academy of Artificial Intelligence (BAAI), 2019</li>
+<li>First Prize of Nature Science Award, Chinese Association for Artificial Intelligence, 2018</li>
+<li>Super AI Leader - Pioneer Award, World AI Conference (WAIC), 2018</li>
+<li>NeurIPS Workshop Best Paper Award, 2018</li>
+<li>CVPR Best Paper Award, 2017</li>
+<li>Doctoral Dissertation Award, Chinese Association of Automation, 2015</li>
+
+<!-- <li>CVPR Best Paper Finalists, 2022</li>
 <li>MIT TR35 Asia-Pacific, 2021</li>
 <li>Qingcheng Award, Damo Academy of Alibaba, 2020</li>
 <li>Outstanding Young Researcher, Chinese Association for Artificial Intelligence, 2019</li>
 <li>Super AI Leader - Pioneer Award, World AI Conference (WAIC), 2018</li>
 <li>NeurIPS Workshop Best Paper Award, 2018</li>
 <li>CVPR Best Paper Award, 2017</li>
-<li>Doctoral Dissertation Award, Chinese Association of Automation, 2015</li>
+<li>Doctoral Dissertation Award, Chinese Association of Automation, 2015</li> -->
+
+
 <!-- <li>First Prize of Doctoral Dissertation Award, Tsinghua University, 2015</li> -->
 <!-- <li>Outstanding Graduate, Tsinghua University, 2015</li> -->
 <!-- <li>Top 100 Most Influential Scientific Papers from China, Ministry of Science and Technology of China, 2015</li> -->
@@ -1089,6 +1201,7 @@ target="blank">talk</A>]
     <a>Zanlin Ni (2022-)</a><BR>
     <a>Henry Zheng (2022-)</a><BR>
     <a>Dongchen Han (2023-)</a><BR>
+    <a href="https://shihao1895.github.io">Hao Shi (2023-)    </a><BR>
 </p></li>
 
   <li> <p><b>Co-supervised Graduate students</b>: <BR> 
@@ -1097,11 +1210,14 @@ target="blank">talk</A>]
     <a href="https://www.rainforest-wang.cool/">Yulin Wang</a> (2019-)  <BR>
     Qisen Yang  (2019-) <BR>
     <a href="https://www.jiayiguo.net/">Jiayi Guo</a>  (2020-) <BR>
-    <a href="https://scholar.google.com/citations?user=ZueTF6oAAAAJ&hl=en">Chunjiang Ge </a>  (2020-) <BR>
+    <a href="https://john-ge.github.io/">Chunjiang Ge </a>  (2020-) <BR>
     Rui Huang  (2020-) <BR>
     <a href="https://scholar.google.com/citations?user=m2M6b58AAAAJ&hl=en">Zhuofan Xia </a> (2020-) <BR>
-    Yang Yue (2022-) 
-    Huanqian Wang (2023-)
+    Chenxin Tao  (2020-) <BR>
+    <a href="https://shenzhi-wang.netlify.app/">Shenzhi Wang </a> (2021-) <BR>
+    Matthieu Lin (2021-) <BR>
+    Yang Yue (2022-) <BR>
+    Huanqian Wang (2023-) <BR>
 </p></li>
 
 
@@ -1123,6 +1239,7 @@ target="blank">talk</A>]
         <a>Kaiqian Han</a> (2019; now at Sense Time)  <BR>
         <a>Kuan Wang</a> (2019; now PhD student at GATech)  <BR>
         <a>Jiayu Xiao</a> (2019; now PhD student at UCAS)  <BR>
+        <a>Qihang Zhang</a> (2021~2023; now Ph.D. student at UBC)  <BR>
 </p></li>
 
   <li> <p><b>Undergraduate students at Cornell</b>: <BR> 
