--- a/index.html
+++ b/index.html
@@ -1224,6 +1224,7 @@ target="blank">talk</A>]
 
 
 <li> <p><b>Alumni</b>: <BR> 
+    <a>Yukang Yang</a> (2019-2022)  <BR>
     <a>Chaofei Wang</a> (2018-2023)  <BR>
     <a>Peng Jiang</a> (2017-2023)  <BR>
     <a>Wenjie Shi</a> (2016-2022; Meituan)  <BR>
