--- a/index.html
+++ b/index.html
@@ -1357,7 +1357,7 @@ target="blank">talk</A>]
 </p></li>
 
   <li> <p><b>Co-supervised Graduate students</b>: <BR> 
-    <a href="https://www.rainforest-wang.cool/">Yulin Wang</a> (2019-)  <BR>
+    <a href="https://www.wyl.cool/">Yulin Wang</a> (2019-)  <BR>
     <a href="https://qisen-yang.netlify.app/">Qisen Yang</a> (2019-)  <BR>
     <a href="https://www.jiayiguo.net/">Jiayi Guo</a>  (2020-) <BR>
     <a href="https://john-ge.github.io/">Chunjiang Ge </a>  (2020-) <BR>
