--- a/index.html
+++ b/index.html
@@ -1375,7 +1375,7 @@ target="blank">talk</A>]
 
 <li> <p><b>Alumni</b>: <BR> 
     <a href="https://yizenghan.top/">Yizeng Han</a> (2018-2024)  <BR>
-    <a href="https://panxuran.github.io/">Xuran Pan</a> (2018-2024)  <BR>
+    <a href="https://xuranpan.plus">Xuran Pan</a> (2018-2024)  <BR>
     <a>Yukang Yang</a> (2019-2022)  <BR>
     <a>Chaofei Wang</a> (2018-2023)  <BR>
     <a>Peng Jiang</a> (2017-2023)  <BR>
